--- a/front/index.html
+++ b/front/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <title></title>
-   <script src="libs/colors.js"></script>
+   <script src="externs.js"></script>
    <script src="components/standard/webcomponentsjs/webcomponents.js"></script>
    <link rel="import" href="components/standard/polymer/polymer.html">
    <link rel="import" href="components/artist-info/artist-info.html">
