--- a/front/index.html
+++ b/front/index.html
@@ -15,8 +15,7 @@
 </head>
 <body>
    <div id="container">
-      <artist-info artist="Courtney Barnett" user="alfino27"><svg class="chart_svg"></svg></artist-info>
-      <artist-info artist="Radiohead" user="alfino27"><svg class="chart_svg"></svg></artist-info>
+      <artist-info artist="Angel Olsen" user="alfino27"><svg class="chart_svg"></svg></artist-info>
    </div>
 </body>
 </html>
