--- a/front/index.html
+++ b/front/index.html
@@ -6,16 +6,16 @@
    <script src="components/standard/webcomponentsjs/webcomponents.js"></script>
    <link rel="import" href="components/standard/polymer/polymer.html">
    <link rel="import" href="components/artist-info/artist-info.html">
+   <link rel="import" href="components/user-info/user-info.html">
    <link rel="stylesheet" type="text/css" href="main.css">
 
    <link href="/static/libs/nv.d3.min.css" rel="stylesheet" type="text/css">
    <script src="/static/libs/d3.js" charset="utf-8"></script>
    <script src="/static/libs/nv.d3.min.js"></script>
-   <script src="/static/libs/stream_layers.js"></script>
 </head>
 <body>
    <div id="container">
-      <artist-info artist="Angel Olsen" user="alfino27"><svg class="chart_svg"></svg></artist-info>
+      <user-info></user-info> 
    </div>
 </body>
 </html>
