--- a/front/index.html
+++ b/front/index.html
@@ -13,7 +13,7 @@
    <script src="/static/libs/d3.js" charset="utf-8"></script>
    <script src="/static/libs/nv.d3.min.js"></script>
 </head>
-<body>
+<body unresolved>
    <div id="container">
       <user-info></user-info> 
    </div>
